Breaking changes (from main code base):
- Miner files are not backwards compatible
- Pool files are not backwards compatible

Changelog NemosMiner 3.9.9.6 Beta1 19.10.2020
=============================================

Miner Updates:
- GMiner-v2.29
- JayddeeCpu-v3.15.0
- lolMiner-v1.11.0
- Trex-v0.18.2

Improved:
- More available regions (=less latency = less stale shares)

New:
- Config item 'ApplyUnprofitableAlgorithmList'
  If 'true' NemosMiner will not mine algorithms listed in UnprofitableAlgorithms.txt (recommended)


Changelog NemosMiner 3.9.9.5 Beta7 16.10.2020
=============================================

Miner Updates:
- lolMiner-v1.10.0
- TeamRed-v0.7.14
- Wildrig-v0.28.1

New:
- Sticky headers in Web GUI (Miners, Pools & Switching Log)
- Create backup of Logs\DailyEarnings.csv at mining start to prevent earnings data loss 


Changelog NemosMiner 3.9.9.5 Beta6 12.10.2020
=============================================

Fixed:
- PoolBalances (Regression of Beta5 / PayoutThreshold paremeter in PoolsConfig.json not working)
- Power readout when HwINFO64 registry entries were corrected while NemosMiner was running

Miner Updates:
- lolMiner-v1.10.0
- SRBMminerMulti-v0.5.4
- Trex-v0.18.1


Changelog NemosMiner 3.9.9.5 Beta5 08.10.2020
=============================================

Fixed:
- PayoutThreshold paremeter in PoolsConfig.json not working
- Power readout compatibility for Gminer & Trex and NVidia driver 456.55 and newer
- Web GUI: Other than ticked objects were removed (problem with bootstrap table 0.18, reverting to 0.17.1 fixes the issue)

Miner Updates:
- Gminer-v2.27
- Wildrig-v0.28.0


Changelog NemosMiner 3.9.9.5 Beta4 06.10.2020
=============================================

Fixed:
- Main window: List miner device group with less than 5 miners
- Rig Monitor: Hashrate formatting

Miner Updates:
- NanoMiner-v1.11.0
- NBMiner-v32.1
- TeamRed-v0.7.13

Pools:
- Zergpool: Use host name for anycast


Changelog NemosMiner 3.9.9.5 Beta3 04.10.2020