@@ -2,7 +2,7 @@
 
 $Name = "$(Get-Item $MyInvocation.MyCommand.Path | Select-Object -ExpandProperty BaseName)"
 $Path = ".\Bin\$($Name)\teamredminer.exe"
-$Uri = "https://github.com/todxx/teamredminer/releases/download/0.7.13/teamredminer-v0.7.13-win.zip"
+$Uri = "https://github.com/todxx/teamredminer/releases/download/0.7.14/teamredminer-v0.7.14-win.zip"
 $DeviceEnumerator = "Type_Vendor_Index"
 $DeviceEnumerator = "Type_Vendor_Slot"
 
@@ -22,7 +22,7 @@ $Commands = [PSCustomObject[]]@(
     [PSCustomObject]@{ Algorithm = "CuckarooD29";          Fee = 0.025; MinMemGB = 2.1; Command = " --algo=cuckarood29_grin" } #2GB is not enough
     [PSCustomObject]@{ Algorithm = "Cuckatoo31";           Fee = 0.025; MinMemGB = 3.0; Command = " --algo=cuckatoo31_grin" }
 #   [PSCustomObject]@{ Algorithm = "Ethash";               Fee = 0.025; MinMemGB = 4.0; Command = " --algo=ethash" } #PhoenixMiner-v5.1c is fastest
-    [PSCustomObject]@{ Algorithm = "KawPoW";               Fee = 0.02;  MinMemGB = 3.0; Command = " --algo=kawpow" } #Wildrig-v0.28.0 is fastest on Polaris
+    [PSCustomObject]@{ Algorithm = "KawPoW";               Fee = 0.02;  MinMemGB = 3.0; Command = " --algo=kawpow" } #Wildrig-v0.28.1 is fastest on Polaris
     [PSCustomObject]@{ Algorithm = "Lyra2RE3";             Fee = 0.025; MinMemGB = 2.0; Command = " --algo=lyra2rev3" }
     [PSCustomObject]@{ Algorithm = "Lyra2z";               Fee = 0.03;  MinMemGB = 2.0; Command = " --algo=lyra2z" }
     [PSCustomObject]@{ Algorithm = "MTP";                  Fee = 0.025; MinMemGB = 4.0; Command = " --algo=mtp" }
@@ -61,7 +61,7 @@ If ($Commands = $Commands | Where-Object { $Pools.($_.Algorithm).Host }) {
                     If ($_.Algorithm -like "Cryptonight*") { 
                         $WarmupTime = 90
                     }
-                    ElseIf ($_.Algorithm -eq "Ethash") { 
+                    ElseIf ($_.Algorithm -match "^Ethash*|^KawPow*") { 
                         $WarmupTime = 60
                         If ($Pools.($_.Algorithm).Name -match "^NiceHash*|^MPH*") { $Command += " --eth_stratum_mode=nicehash" }
                     }
