@@ -2,7 +2,7 @@ using module ..\Includes\Include.psm1
 
 $Name = "$(Get-Item $MyInvocation.MyCommand.Path | Select-Object -ExpandProperty BaseName)"
 $Path = ".\Bin\$($Name)\wildrig.exe"
-$Uri = "https://github.com/andru-kun/wildrig-multi/releases/download/0.28.0/wildrig-multi-windows-0.28.0.7z"
+$Uri = "https://github.com/andru-kun/wildrig-multi/releases/download/0.28.1/wildrig-multi-windows-0.28.1.7z"
 $DeviceEnumerator = "Type_Vendor_Slot"
 
 $Commands = [PSCustomObject[]]@(
@@ -21,12 +21,12 @@ $Commands = [PSCustomObject[]]@(
     [PSCustomObject]@{ Algorithm = "Hmq1725";     Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo hmq1725" } #CryptoDredge-v0.25.1 is fastest
 #   [PSCustomObject]@{ Algorithm = "Honeycomb";   Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo honeycomb" } #Algo broken
     [PSCustomObject]@{ Algorithm = "JeongHash";   Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo glt-jeonghash" }
-    [PSCustomObject]@{ Algorithm = "KawPoW";      Fee = @(0.01); MinMemGB = 3; Type = "AMD"; Command = " --algo kawpow" } #TeamRed-v0.7.13 is fastest on Navi
-#   [PSCustomObject]@{ Algorithm = "Lyra2RE3";    Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo lyra2v3" } #TeamRed-v0.7.13 is fastest
+    [PSCustomObject]@{ Algorithm = "KawPoW";      Fee = @(0.01); MinMemGB = 3; Type = "AMD"; Command = " --algo kawpow" } #TeamRed-v0.7.14 is fastest on Navi
+#   [PSCustomObject]@{ Algorithm = "Lyra2RE3";    Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo lyra2v3" } #TeamRed-v0.7.14 is fastest
     [PSCustomObject]@{ Algorithm = "MegaBtx";     Fee = @(0.01); MinMemGB = 1; Type = "AMD"; Command = " --algo megabtx" }
     [PSCustomObject]@{ Algorithm = "MegaMec";     Fee = @(0.01); MinMemGB = 1; Type = "AMD"; Command = " --algo megamec" }
     [PSCustomObject]@{ Algorithm = "Minotaur";    Fee = @(0.01); MinMemGB = 1; Type = "AMD"; Command = " --algo minotaur" }
-#   [PSCustomObject]@{ Algorithm = "MTP";         Fee = @(0.01); MinMemGB = 3; Type = "AMD"; Command = " --algo mtp" } #TeamRed-v0.7.13 is fastest
+#   [PSCustomObject]@{ Algorithm = "MTP";         Fee = @(0.01); MinMemGB = 3; Type = "AMD"; Command = " --algo mtp" } #TeamRed-v0.7.14 is fastest
     [PSCustomObject]@{ Algorithm = "MTPTrc";      Fee = @(0.01); MinMemGB = 3; Type = "AMD"; Command = " --algo mtp-trc" }
     [PSCustomObject]@{ Algorithm = "PadiHash";    Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo glt-padihash" }
     [PSCustomObject]@{ Algorithm = "PawelHash";   Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo glt-pawelhash" }
@@ -42,13 +42,13 @@ $Commands = [PSCustomObject[]]@(
     [PSCustomObject]@{ Algorithm = "Timetravel";  Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo timetravel" }
     [PSCustomObject]@{ Algorithm = "Tribus";      Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo tribus" }
     [PSCustomObject]@{ Algorithm = "X11k";        Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x11k" }
-#   [PSCustomObject]@{ Algorithm = "X16r";        Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x16r" } #TeamRed-v0.7.13 is fastest
+#   [PSCustomObject]@{ Algorithm = "X16r";        Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x16r" } #TeamRed-v0.7.14 is fastest
     [PSCustomObject]@{ Algorithm = "X16rt";       Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x16rt" }
-#   [PSCustomObject]@{ Algorithm = "X16rv2";      Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x16rv2" } #TeamRed-v0.7.13 is fastest
+#   [PSCustomObject]@{ Algorithm = "X16rv2";      Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x16rv2" } #TeamRed-v0.7.14 is fastest
     [PSCustomObject]@{ Algorithm = "X16s";        Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x16s" }
     [PSCustomObject]@{ Algorithm = "X17";         Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x17" }
     [PSCustomObject]@{ Algorithm = "X17r";        Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x17r --protocol ufo2" }
-    [PSCustomObject]@{ Algorithm = "X21s";        Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x21s" } #TeamRed-v0.7.13 is fastest
+#   [PSCustomObject]@{ Algorithm = "X21s";        Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x21s" } #TeamRed-v0.7.14 is fastest
     [PSCustomObject]@{ Algorithm = "X22i";        Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x22i" }
     [PSCustomObject]@{ Algorithm = "X33";         Fee = @(0.01); MinMemGB = 2; Type = "AMD"; Command = " --algo x33" }
 
@@ -66,16 +66,16 @@ $Commands = [PSCustomObject[]]@(
     [PSCustomObject]@{ Algorithm = "Hex";         Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo hex" }
 #   [PSCustomObject]@{ Algorithm = "Hmq1725";     Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo hmq1725" } #CryptoDredge-v0.25.1 is fastest
 #   [PSCustomObject]@{ Algorithm = "Honeycomb";   Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo honeycomb" } #Algo broken
-    [PSCustomObject]@{ Algorithm = "JeongHash";   Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo glt-jeonghash" } #Trex-v0.18.1 is fastest
+    [PSCustomObject]@{ Algorithm = "JeongHash";   Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo glt-jeonghash" } #Trex-v0.18.2 is fastest
 #   [PSCustomObject]@{ Algorithm = "KawPoW";      Fee = @(0.01); MinMemGB = 3; Type = "NVIDIA"; Command = " --algo kawpow" } #NBMiner-v32.1 is fastest
 #   [PSCustomObject]@{ Algorithm = "Lyra2RE3";    Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo lyra2v3" } #CcminerLyraYesscrypt-v8.21r18v5 is fastest
     [PSCustomObject]@{ Algorithm = "MegaBtx";     Fee = @(0.01); MinMemGB = 1; Type = "NVIDIA"; Command = " --algo megabtx" }
     [PSCustomObject]@{ Algorithm = "MegaMec";     Fee = @(0.01); MinMemGB = 1; Type = "NVIDIA"; Command = " --algo megamec" }
     [PSCustomObject]@{ Algorithm = "Minotaur";    Fee = @(0.01); MinMemGB = 1; Type = "NVIDIA"; Command = " --algo minotaur" }
-#   [PSCustomObject]@{ Algorithm = "MTP";         Fee = @(0.01); MinMemGB = 3; Type = "NVIDIA"; Command = " --algo mtp" } #Trex-v0.18.1 is fastest
+#   [PSCustomObject]@{ Algorithm = "MTP";         Fee = @(0.01); MinMemGB = 3; Type = "NVIDIA"; Command = " --algo mtp" } #Trex-v0.18.2 is fastest
     [PSCustomObject]@{ Algorithm = "MTPTrc";      Fee = @(0.01); MinMemGB = 3; Type = "NVIDIA"; Command = " --algo mtp-trc" }
     [PSCustomObject]@{ Algorithm = "PadiHash";    Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo glt-padihash" }
-    [PSCustomObject]@{ Algorithm = "PawelHash";   Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo glt-pawelhash" } #Trex-v0.18.1 is fastest
+    [PSCustomObject]@{ Algorithm = "PawelHash";   Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo glt-pawelhash" } #Trex-v0.18.2 is fastest
     [PSCustomObject]@{ Algorithm = "Phi";         Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo phi" }
     [PSCustomObject]@{ Algorithm = "Polytimos";   Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo polytimos" }
     [PSCustomObject]@{ Algorithm = "Sha256csm";   Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo sha256csm" }
@@ -84,18 +84,18 @@ $Commands = [PSCustomObject[]]@(
     [PSCustomObject]@{ Algorithm = "Renesis";     Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo renesis" }
 #   [PSCustomObject]@{ Algorithm = "Skein2";      Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo skein2" } #CcminerAlexis78-v1.5.2 is fastest
 #   [PSCustomObject]@{ Algorithm = "SkunkHash";   Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo skunkhash" } #CryptoDredge-v0.25.1 is fastest
-#   [PSCustomObject]@{ Algorithm = "Sonoa";       Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo sonoa" } #Trex-v0.18.1 is fastest
+#   [PSCustomObject]@{ Algorithm = "Sonoa";       Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo sonoa" } #Trex-v0.18.2 is fastest
     [PSCustomObject]@{ Algorithm = "Timetravel";  Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo timetravel" }
     [PSCustomObject]@{ Algorithm = "Tribus";      Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo tribus" }
     [PSCustomObject]@{ Algorithm = "X11k";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x11k" }
-#   [PSCustomObject]@{ Algorithm = "X16r";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x16r" } #Trex-v0.18.1 is fastest
+#   [PSCustomObject]@{ Algorithm = "X16r";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x16r" } #Trex-v0.18.2 is fastest
     [PSCustomObject]@{ Algorithm = "X16rt";       Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x16rt" }
-#   [PSCustomObject]@{ Algorithm = "X16rv2";      Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x16rv2" } #Trex-v0.18.1 is fastest
-#   [PSCustomObject]@{ Algorithm = "X16s";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x16s" } #Trex-v0.18.1 is fastest
+#   [PSCustomObject]@{ Algorithm = "X16rv2";      Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x16rv2" } #Trex-v0.18.2 is fastest
+#   [PSCustomObject]@{ Algorithm = "X16s";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x16s" } #Trex-v0.18.2 is fastest
 #   [PSCustomObject]@{ Algorithm = "X17";         Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x17" }
     [PSCustomObject]@{ Algorithm = "X17r";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x17r --protocol ufo2" }
-#   [PSCustomObject]@{ Algorithm = "X21s";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x21s" } #Trex-v0.18.1 is fastest
-#   [PSCustomObject]@{ Algorithm = "X22i";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x22i" } #Trex-v0.18.1 is fastest
+#   [PSCustomObject]@{ Algorithm = "X21s";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x21s" } #Trex-v0.18.2 is fastest
+#   [PSCustomObject]@{ Algorithm = "X22i";        Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x22i" } #Trex-v0.18.2 is fastest
     [PSCustomObject]@{ Algorithm = "X33";         Fee = @(0.01); MinMemGB = 2; Type = "NVIDIA"; Command = " --algo x33" }
 )
 
